--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>module two assign sol</title>
+    <link type="text/css" rel="stylesheet" href="cssfile.css" />
   </head>
   <body>
-    <h1>This is my courser's assignment</h1>
+    <h1>Our Menu</h1>
+    <div class="container">
+      <div class="box"><div class="sb"></div></div>
+      <div class="box"><div class="sb"></div></div>
+      <div class="box"><div class="sb"></div></div>
+    </div>
   </body>
 </html>
