--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Our Menu</h1>
     <div class="container">
-      <div class="box"><div class="sb"></div></div>
-      <div class="box"><div class="sb"></div></div>
-      <div class="box"><div class="sb"></div></div>
+      <p class="box"><div class="sb"></div></p>
+      <p class="box"><div class="sb"></div></p>
+      <p id="b3" class="box"><div class="sb"></div></p>
     </div>
   </body>
 </html>
