--- a/index.html
+++ b/index.html
@@ -8,10 +8,46 @@
   </head>
   <body>
     <h1>Our Menu</h1>
+
     <div class="container">
-      <p class="box"><div class="sb"></div></p>
-      <p class="box"><div class="sb"></div></p>
-      <p id="b3" class="box"><div class="sb"></div></p>
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <section class="col">
+          <h2 class="sb">Sushi</h2>
+          <p>
+            Borders and Colors: Each section should have a background color set
+            to some color of your choosing. Set the background color of each
+            section title region to some unique color of your choosing. Make
+            sure that the background color still allows the user to view the
+            text in the section and section title regions.
+          </p>
+        </section>
+      </div>
+
+      <div  class="col-lg-4 col-md-6 col-sm-12">
+        <section class="col">
+          <h2 class="sb">Chicken</h2>
+          <p >
+            Borders and Colors: Each section should have a background color set
+            to some color of your choosing. Set the background color of each
+            section title region to some unique color of your choosing. Make
+            sure that the background color still allows the user to view the
+            text in the section and section title regions.
+          </p>
+        </section>
+      </div>
+
+      <div id="col3" class="col-lg-4 col-sm-12 col-md-12 ">
+        <section class="col">
+          <h2 class="sb">Pork</h2>
+          <p >
+            Borders and Colors: Each section should have a background color set
+            to some color of your choosing. Set the background color of each
+            section title region to some unique color of your choosing. Make
+            sure that the background color still allows the user to view the
+            text in the section and section title regions.
+          </p>
+        </section>
+      </div>
     </div>
   </body>
 </html>
