--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>module two assign sol</title>
-    <link type="text/css" rel="stylesheet" href="cssfile.css" />
+    <link type="text/css" rel="stylesheet" href="./css/cssfile.css" />
   </head>
   <body>
     <h1>Our Menu</h1>
