--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Module 4 Solution Starter</title>
-    <script src="SpeakHello.js"></script>
-    <script src="SpeakGoodBye.js"></script>
-    <script src="script.js"></script>
+    <script src="module 4 assign/SpeakHello.js"></script>
+    <script src="module 4 assign/SpeakGoodBye.js"></script>
+    <script src="module 4 assign/script.js"></script>
   </head>
 
   <body>
